Add constructor tests, fix, format according code style